# VM_PMX_HR

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ucl_hr/: hooks.py  modules.txt
ucl_hr/ucl_hr_employee/doctype/ucl_hr/: test_ucl_hr.py  ucl_hr.js  ucl_hr.json  ucl_hr.py
