[project]
name = "ucl_hr"
authors = [
    { name = "UCL實驗室", email = "c112118210@nkust.edu.tw"}
]
description = "UCL實驗室開發用於紀錄員工資訊之模組"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
